[package]
name = "ssh-key-dir"
repository = "https://github.com/coreos/ssh-key-dir"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.58.0"
exclude = ["/.cci.jenkinsfile", "/.github", "/.gitignore"]
authors = [ "Benjamin Gilbert <bgilbert@redhat.com>" ]
description = "sshd AuthorizedKeysCommand to read ~/.ssh/authorized_keys.d"
readme = "README.md"
version = "0.1.4"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: ssh-key-dir release {{version}}"
tag-message = "ssh-key-dir v{{version}}"

[[bin]]
name = "ssh-key-dir"
path = "src/main.rs"

[dependencies]
anyhow = ">= 1.0.38, < 2"
clap = { version = ">= 3.1, < 4", default-features = false, features = ["std", "cargo"] }
users = ">= 0.10, < 0.12"

[dev-dependencies]
nix = ">= 0.17, < 0.27"
tempfile = "3"
